@@ -1,7 +1,10 @@
 @comment $NetBSD$
 bin/lha
+include/liblhasa-1.0/lha_decoder.h
 include/liblhasa-1.0/lha_file_header.h
 include/liblhasa-1.0/lha_input_stream.h
 include/liblhasa-1.0/lha_reader.h
+include/liblhasa-1.0/lhasa.h
 lib/liblhasa.la
+lib/pkgconfig/liblhasa.pc
 man/man1/lha.1
