@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.1.1.1 2012/05/02 12:19:43 wiz Exp $
+$NetBSD: distinfo,v 1.2 2012/05/08 06:13:27 wiz Exp $
 
-SHA1 (lhasa-0.0.5.tar.gz) = 3433b13a208aebcd0b966c4642d49ecbb9caa681
-RMD160 (lhasa-0.0.5.tar.gz) = e9204197595c38e11304f0b308679cc2da0da201
-Size (lhasa-0.0.5.tar.gz) = 1753764 bytes
+SHA1 (lhasa-0.0.7.tar.gz) = 40890150483c2075a6cd108fee5bbe23a96d5d71
+RMD160 (lhasa-0.0.7.tar.gz) = 4f0217e88d3fda0528242ed70657326b91b62826
+Size (lhasa-0.0.7.tar.gz) = 2646160 bytes
