@@ -1,7 +1,7 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2012/01/23 21:39:32 pettai Exp $
 #
 
-DISTNAME=	pip-1.0.2
+DISTNAME=	pip-1.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	devel
 MASTER_SITES=	http://pypi.python.org/packages/source/p/pip/
@@ -11,15 +11,9 @@ HOMEPAGE=	http://www.pip-installer.org/
 COMMENT=	Installs Python packages as an easy_install replacement
 LICENSE=	mit
 
-DEPENDS+=	${PYPKGPREFIX}-setuptools>=0.6c9:../../devel/py-setuptools
-
-REPLACE_PYTHON=	${WRKSRC}/*.py
-
 PKG_DESTDIR_SUPPORT=	user-destdir
 
 PLIST_SUBST+=		PYVERSSUFFIX="${PYVERSSUFFIX}"
 
-PYDISTUTILSPKG=	yes
-
-.include "../../lang/python/extension.mk"
+.include "../../lang/python/egg.mk"
 .include "../../mk/bsd.pkg.mk"
