@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.11143 2012/06/02 13:19:30 obache Exp $
+$NetBSD: TODO,v 1.11145 2012/06/03 13:27:51 obache Exp $
 
 Suggested new packages
 ======================
@@ -874,7 +874,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o libXevie-1.0.3
 	o libXext-1.3.1
 	o libXfixes-5.0
-	o libXft-2.3.0
+	o libXft-2.3.1
 	o libXi-1.6.1
 	o libXinerama-1.1.2
 	o libXmu-1.1.1
@@ -941,6 +941,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o libtool-info-2.4.2
 	o libv4l-0.8.5
 	o libvirt-0.9.9
+	o libvisio-0.0.17
 	o libxcb-1.8.1
 	o libxkbfile-1.0.8
 	o libxklavier-5.2.1
@@ -1083,6 +1084,8 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o pcal-4.8
 	o pcmanfm-0.5.2 [pkg/42451]
 	o pdmenu-1.2.87
+	o pear-Auth_SASL-1.0.6 [pkg/46533]
+	o pear-DB-1.7.14 [pkg/46534]
 	o pen-0.17.3
 	o perl-5.16.0
 	o pessulus-2.30.3 [GNOME 2.28]
@@ -1143,11 +1146,12 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o py-karaoke-0.7.3
 	o py-moin-1.9.4
 	o py-mxDateTime-3.2.0
+	o py-simplejson-2.5.2
 	o py-sybase-0.37
 	o py-urwid-1.0.1
 	o py-xcbgen-1.7.1
 	o qbrew-0.3.9
-	o qemu-1.0.1 [wip]
+	o qemu-1.1.0 [wip]
 	o qiv-2.2.4 [pkg/46167]
 	o qnetwalk-1.3
 	o quilt-0.60
@@ -1309,7 +1313,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o twelf-1.5r1
 	o twm-1.0.7
 	o txt2html-2.51
-	o txt2man-1.5.6
+	o txt2man-1.5.6 [pkg/46535]
 	o uae-0.8.29
 	o ubs-0.20
 	o ucblogo-5.5
@@ -1322,7 +1326,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o uriparser-0.7.5
 	o userppp-030706
 	o utilisp-1.14
-	o vala-0.17.0
+	o vala-0.17.1
 	o valgrind-3.7.0
 	o vbetool-1.1
 	o vera-1.17
@@ -1517,6 +1521,7 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o xwud-1.0.4
 	o xye-0.12.1
 	o xzip-182
+	o yabasic-2.763 [pkg/46532]
 	o yafc-1.1
 	o yaz-4.1.7
 	o yodl-2.14.3
