@@ -1,3 +1,5 @@
+$NetBSD$
+
 --- src/core/modules/Skybright.cpp.orig	2011-07-02 15:22:18.000000000 +0200
 +++ src/core/modules/Skybright.cpp	2011-11-01 17:14:24.676826514 +0100
 @@ -29,6 +29,8 @@
