@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2012,v 1.1749 2012/06/02 16:17:41 taca Exp $
+$NetBSD: CHANGES-2012,v 1.1751 2012/06/03 10:20:15 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2012:
 
@@ -2723,3 +2723,5 @@ Changes to the packages collection and infrastructure in 2012:
 	Updated net/pear-SOAP to 0.13.0 [taca 2012-06-02]
 	Updated databases/mysql55-client to 5.5.25 [adam 2012-06-03]
 	Updated databases/mysql55-server to 5.5.25 [adam 2012-06-03]
+	Updated archivers/lhasa to 0.0.7 [wiz 2012-06-03]
+	Updated devel/py-pip to 1.1 [obache 2012-06-03]
